--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: yao 864554492@qq.com
  * @Date: 2023-11-26 22:15:11
- * @LastEditors: yaojinxi 864554492@qq.com
- * @LastEditTime: 2023-11-29 22:19:39
+ * @LastEditors: yao 864554492@qq.com
+ * @LastEditTime: 2023-11-30 09:17:34
  * @FilePath: /Team_D_CA/Index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -23,7 +23,7 @@
         <script src="./jq.min.js"></script>
         <script src="./js/home.js"></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bsootstrap.bundle.min.js"
+            src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim"
             crossorigin="anonymous"
         ></script>
@@ -50,7 +50,7 @@
                         <a href="./pages/view1.html" class="nav-link">Plan</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">More</a>
+                        <a href="./pages/join.html" class="nav-link">Join</a>
                     </li>
                 </ul>
             </header>
