--- a/pages/view1.html
+++ b/pages/view1.html
@@ -23,7 +23,7 @@
         <script src="../jq.min.js"></script>
         <script src="../js/home.js"></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bsootstrap.bundle.min.js"
+            src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim"
             crossorigin="anonymous"
         ></script>
