--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: yao 864554492@qq.com
  * @Date: 2023-11-26 22:15:11
- * @LastEditors: yao 864554492@qq.com
- * @LastEditTime: 2023-11-30 09:17:34
+ * @LastEditors: yaojinxi 864554492@qq.com
+ * @LastEditTime: 2023-12-02 00:12:56
  * @FilePath: /Team_D_CA/Index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -15,49 +15,58 @@
         <link href="./style/public.css" rel="stylesheet" />
         <link href="./style/style.css" rel="stylesheet" />
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         />
         <script src="./jq.min.js"></script>
         <script src="./js/home.js"></script>
         <script
-            src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"
         ></script>
     </head>
     <body>
         <div class="public-header">
-            <header
-                class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
-            >
+            <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
                 <a
-                    href="/"
-                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+                    href="./Index.html"
+                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none"
                 >
                     <span class="fs-4">Discover</span>
                 </a>
 
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page"
+                        <a
+                            href="./Index.html"
+                            class="nav-link text-white"
+                            aria-current="page"
                             >Home</a
                         >
                     </li>
                     <li class="nav-item">
-                        <a href="./pages/view1.html" class="nav-link">Plan</a>
+                        <a
+                            href="./pages/view-list.html"
+                            class="nav-link text-white"
+                            >Plan</a
+                        >
                     </li>
                     <li class="nav-item">
-                        <a href="./pages/join.html" class="nav-link">Join</a>
+                        <a href="./pages/join.html" class="nav-link text-white"
+                            >Join</a
+                        >
                     </li>
                 </ul>
             </header>
         </div>
-        <div class="home-main bgimg"></div>
-        <div class="home-content">
-            <div>123</div>
+        <div class="home-main bgimg">
+            <div class="home-content">
+                <h1 class="home-content-title">Discover</h1>
+                <h3 class="home-content-more">More to explore</h3>
+            </div>
         </div>
     </body>
 </html>
