--- a/pages/view1.html
+++ b/pages/view1.html
@@ -33,8 +33,8 @@
             <header
                 class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
             >
-                <a
-                    href="/"
+                                <a
+                    href="../Index.html"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
                 >
                     <span class="fs-4">Discover</span>
