view commit and header bug check

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
  * @Author: yao 864554492@qq.com
  * @Date: 2023-11-26 22:15:11
  * @LastEditors: yaojinxi 864554492@qq.com
- * @LastEditTime: 2023-12-02 00:12:56
+ * @LastEditTime: 2023-12-02 14:19:18
  * @FilePath: /Team_D_CA/Index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -65,7 +65,10 @@
         <div class="home-main bgimg">
             <div class="home-content">
                 <h1 class="home-content-title">Discover</h1>
-                <h3 class="home-content-more">More to explore</h3>
+                <a href="./pages/view-list.html" class="nav-link text-white">
+                    <h3 class="home-content-more">More to explore</h3>
+                </a>
+                
             </div>
         </div>
     </body>
