--- a/pages/view-list.html
+++ b/pages/view-list.html
@@ -2,7 +2,7 @@
  * @Author: yaojinxi 864554492@qq.com
  * @Date: 2023-12-01 17:53:39
  * @LastEditors: yaojinxi 864554492@qq.com
- * @LastEditTime: 2023-12-02 00:13:43
+ * @LastEditTime: 2023-12-02 14:54:47
  * @FilePath: \CA-WD\NCI_web-design_CA\pages\view-list.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -23,16 +23,16 @@
         <script src="../jq.min.js"></script>
         <script src="../js/home.js"></script>
         <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"
-    ></script>
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <div class="public-header">
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
                 <a
-                    href="./Index.html"
+                    href="../Index.html"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none"
                 >
                     <span class="fs-4">Discover</span>
@@ -41,19 +41,19 @@
                 <ul class="nav nav-pills">
                     <li class="nav-item">
                         <a
-                            href="./Index.html"
+                            href="../Index.html"
                             class="nav-link text-white"
                             aria-current="page"
                             >Home</a
                         >
                     </li>
                     <li class="nav-item">
-                        <a href="./pages/view1.html" class="nav-link text-white"
+                        <a href="../pages/view-list.html" class="nav-link text-white"
                             >Plan</a
                         >
                     </li>
                     <li class="nav-item">
-                        <a href="./pages/join.html" class="nav-link text-white"
+                        <a href="../pages/join.html" class="nav-link text-white"
                             >Join</a
                         >
                     </li>
@@ -90,93 +90,62 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <svg
+                        <img
+                            src="../images/kyoto.jpg"
                             class="bd-placeholder-img"
-                            width="100%"
-                            height="100%"
-                            xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true"
-                            preserveAspectRatio="xMidYMid slice"
-                            focusable="false"
-                        >
-                            <rect
-                                width="100%"
-                                height="100%"
-                                fill="var(--bs-secondary-color)"
-                            />
-                        </svg>
+                        />
                         <div class="container">
                             <div class="carousel-caption text-start">
-                                <h1>Example headline.</h1>
+                                <h1>Kyoto</h1>
                                 <p class="opacity-75">
-                                    Some representative placeholder content for
-                                    the first slide of the carousel.
+                                    Kyoto is one of oldest cities in Japan. Many
+                                    tourists from all over the world come to
+                                    Kyoto.
                                 </p>
                                 <p>
-                                    <a class="btn btn-lg btn-primary" href="#"
-                                        >Sign up today</a
+                                    <a class="btn btn-lg btn-primary" href="../pages/view1.html"
+                                        >Go</a
                                     >
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <svg
+                        <img
+                            src="../images/dali.png"
                             class="bd-placeholder-img"
-                            width="100%"
-                            height="100%"
-                            xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true"
-                            preserveAspectRatio="xMidYMid slice"
-                            focusable="false"
-                        >
-                            <rect
-                                width="100%"
-                                height="100%"
-                                fill="var(--bs-secondary-color)"
-                            />
-                        </svg>
+                        />
                         <div class="container">
                             <div class="carousel-caption">
-                                <h1>Another example headline.</h1>
+                                <h1>Dali</h1>
                                 <p>
-                                    Some representative placeholder content for
-                                    the second slide of the carousel.
+                                    China's most famous holiday resort, best for
+                                    hiking and lake adventures.
                                 </p>
                                 <p>
-                                    <a class="btn btn-lg btn-primary" href="#"
-                                        >Learn more</a
+                                    <a class="btn btn-lg btn-primary" href="../pages/view2.html"
+                                        >Explore</a
                                     >
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <svg
+                        <img
+                            src="../images/Rio-de-janeiro2.png"
                             class="bd-placeholder-img"
-                            width="100%"
-                            height="100%"
-                            xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true"
-                            preserveAspectRatio="xMidYMid slice"
-                            focusable="false"
-                        >
-                            <rect
-                                width="100%"
-                                height="100%"
-                                fill="var(--bs-secondary-color)"
-                            />
-                        </svg>
+                        />
                         <div class="container">
                             <div class="carousel-caption text-end">
-                                <h1>One more for good measure.</h1>
+                                <h1>Rio de Janeiro</h1>
                                 <p>
-                                    Some representative placeholder content for
-                                    the third slide of this carousel.
+                                    One of the most visited cities in the
+                                    Southern Hemisphere and is known for its
+                                    natural settings.
                                 </p>
                                 <p>
-                                    <a class="btn btn-lg btn-primary" href="#"
-                                        >Browse gallery</a
+                                    <a class="btn btn-lg btn-primary" href="../pages/view3.html"
+                                        >More</a
                                     >
                                 </p>
                             </div>
@@ -219,7 +188,7 @@
                             tourists from all over the world come to Kyoto.
                         </p>
                         <p>
-                            <a class="btn btn-secondary" href="#"
+                            <a class="btn btn-secondary" href="../pages/view1.html"
                                 >View details &raquo;</a
                             >
                         </p>
@@ -233,7 +202,7 @@
                             and lake adventures.
                         </p>
                         <p>
-                            <a class="btn btn-secondary" href="#"
+                            <a class="btn btn-secondary" href="../pages/view2.html"
                                 >View details &raquo;</a
                             >
                         </p>
@@ -243,12 +212,11 @@
                         <img class="view-list-img" src="../images/brazil.svg" />
                         <h2 class="fw-normal">Rio de Janeiro</h2>
                         <p>
-                            One of the most visited cities in
-                            the Southern Hemisphere and is known for its natural
-                            settings.
+                            One of the most visited cities in the Southern
+                            Hemisphere and is known for its natural settings.
                         </p>
                         <p>
-                            <a class="btn btn-secondary" href="#"
+                            <a class="btn btn-secondary" href="../pages/view3.html"
                                 >View details &raquo;</a
                             >
                         </p>
@@ -265,16 +233,18 @@
                     <div class="col-md-7">
                         <h2 class="featurette-heading fw-normal lh-1">
                             A journey through the mysterious old city
-                            <span class="text-body-secondary"
-                                ></span
-                            >
+                            <span class="text-body-secondary"></span>
                         </h2>
                         <p class="lead">
                             A journey through the mysterious old city
                         </p>
                     </div>
                     <div class="col-md-5">
-                        <img class="view-card-img" src="../images/kyoto2.png" title="Kyoto"/>
+                        <img
+                            class="view-card-img"
+                            src="../images/kyoto2.png"
+                            title="Kyoto"
+                        />
                     </div>
                 </div>
 
@@ -284,9 +254,7 @@
                     <div class="col-md-7 order-md-2">
                         <h2 class="featurette-heading fw-normal lh-1">
                             The collision of primitive and romantic
-                            <span class="text-body-secondary"
-                                ></span
-                            >
+                            <span class="text-body-secondary"></span>
                         </h2>
                         <p class="lead">
                             Another featurette? Of course. More placeholder
@@ -296,7 +264,11 @@
                         </p>
                     </div>
                     <div class="col-md-5 order-md-1">
-                        <img class="view-card-img" src="../images/dali2.png" title="Dali"/>
+                        <img
+                            class="view-card-img"
+                            src="../images/dali2.png"
+                            title="Dali"
+                        />
                     </div>
                 </div>
 
