--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
  * @Author: yao 864554492@qq.com
  * @Date: 2023-11-26 22:15:11
  * @LastEditors: yaojinxi 864554492@qq.com
- * @LastEditTime: 2023-12-02 14:19:18
+ * @LastEditTime: 2023-12-02 16:06:56
  * @FilePath: /Team_D_CA/Index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -27,10 +27,16 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"
         ></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,500&family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
-        <div class="public-header">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
+        <div class="public-header header-black">
+            <header class="d-flex flex-wrap justify-content-center py-3 ">
                 <a
                     href="./Index.html"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none"
@@ -68,7 +74,6 @@
                 <a href="./pages/view-list.html" class="nav-link text-white">
                     <h3 class="home-content-more">More to explore</h3>
                 </a>
-                
             </div>
         </div>
     </body>
