--- a/pages/view-list.html
+++ b/pages/view-list.html
@@ -2,7 +2,7 @@
  * @Author: yaojinxi 864554492@qq.com
  * @Date: 2023-12-01 17:53:39
  * @LastEditors: yaojinxi 864554492@qq.com
- * @LastEditTime: 2023-12-02 14:54:47
+ * @LastEditTime: 2023-12-02 16:07:07
  * @FilePath: \CA-WD\NCI_web-design_CA\pages\view-list.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -29,8 +29,8 @@
         ></script>
     </head>
     <body>
-        <div class="public-header">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
+        <div class="public-header header-black">
+            <header class="d-flex flex-wrap justify-content-center py-3 ">
                 <a
                     href="../Index.html"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none"
