--- a/pages/view1.html
+++ b/pages/view1.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <div class="public-header">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
+            <header class="d-flex flex-wrap justify-content-center py-3 ">
                 <a
                     href="../Index.html"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none"
