--- a/pages/view-list.html
+++ b/pages/view-list.html
@@ -2,7 +2,7 @@
  * @Author: yaojinxi 864554492@qq.com
  * @Date: 2023-12-01 17:53:39
  * @LastEditors: yaojinxi 864554492@qq.com
- * @LastEditTime: 2023-12-02 16:07:07
+ * @LastEditTime: 2023-12-03 12:49:50
  * @FilePath: \CA-WD\NCI_web-design_CA\pages\view-list.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -277,7 +277,7 @@
                 <div class="row featurette">
                     <div class="col-md-7">
                         <h2 class="featurette-heading fw-normal lh-1">
-                            And lastly, this one.
+                            Denis,are you ok?
                             <span class="text-body-secondary">Checkmate.</span>
                         </h2>
                         <p class="lead">
