--- a/pages/view-list.html
+++ b/pages/view-list.html
@@ -277,15 +277,13 @@
                 <div class="row featurette">
                     <div class="col-md-7">
                         <h2 class="featurette-heading fw-normal lh-1">
-                            Denis,are you ok?
-                            <span class="text-body-secondary">Checkmate.</span>
+                            Perfect union between civilization and
+                            <span class="text-body-secondary">surprising landscapes</span>
                         </h2>
                         <p class="lead">
-                            And yes, this is the last block of representative
-                            placeholder content. Again, not really intended to
-                            be actually read, simply here to give you a better
-                            view of what this would look like with some actual
-                            content. Your content.
+                            ... and why not have the opportunity to connect with nature 
+                            without leaving the city? Take advantage of all the facilities 
+                            of a big city while admiring the natural beauty around you.
                         </p>
                     </div>
                     <div class="col-md-5">
